FIX: Custom CSS files now support updated dark mode

--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -310,7 +310,7 @@
     }
 }
 
-.dark .toc {
+[data-theme="dark"] .toc {
     background: #27292e;
     /* background: var(--entry); */
     border: solid 1px #282a2f;
